Add method to copy contract address on gulp; Add My Bets section to index.html; Add new classes to base.css; Add methods to check wallet bets to current contract on base.js;

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -40,6 +40,7 @@ body {
 }
 
 .bet,
+.bets span,
 .selection {
   border-spacing: 0.25rem;
 }
@@ -54,6 +55,14 @@ b.ball {
   text-align: center;
   height: 2.5rem;
   width: 2.5rem;
+}
+
+b.ball.winner {
+  background-color: #81c181;
+}
+
+b.ball.almost-winner {
+  background-color: #d0bf49;
 }
 
 .list-group-item span,
